unpackaged/main/default/objects/Contact/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>