unpackaged/main/default/objects/Contact/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <label>Preferred Contact Time</label>
    <type>DateTime</type>
</CustomField>