unpackaged/main/default/objects/Contact/fields/VIP_Status__c.field-meta.xml
<CustomField>
    <fullName>VIP_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Status</label>
    <type>Checkbox</type>
</CustomField>