unpackaged/main/default/objects/Contact/validationRules/Check_Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mobile_Number</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISBLANK(MobilePhone),
LEN(MobilePhone)&lt; 10,
NOT(REGEX( MobilePhone, &quot;[0-9+\\-\\(\\)\\s]*&quot;))
)</errorConditionFormula>
    <errorMessage>Mobile number must be at least 10 digits long and should not contain alphabetic characters.</errorMessage>
</ValidationRule>