unpackaged/main/default/objects/Contact/validationRules/Check_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK(Phone),
LEN(Phone)&lt; 10,
NOT(REGEX( Phone, &quot;[0-9+\\-\\(\\)\\s]*&quot;))
)</errorConditionFormula>
    <errorMessage>Phone number must be at least 10 digits long and should not contain alphabetic characters.</errorMessage>
</ValidationRule>